; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-throttle.c_throtl_destroy_tg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-throttle.c_throtl_destroy_tg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.throtl_data = type { i32 }
%struct.throtl_grp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.throtl_data*, %struct.throtl_grp*)* @throtl_destroy_tg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @throtl_destroy_tg(%struct.throtl_data* %0, %struct.throtl_grp* %1) #0 {
  %3 = alloca %struct.throtl_data*, align 8
  %4 = alloca %struct.throtl_grp*, align 8
  store %struct.throtl_data* %0, %struct.throtl_data** %3, align 8
  store %struct.throtl_grp* %1, %struct.throtl_grp** %4, align 8
  %5 = load %struct.throtl_grp*, %struct.throtl_grp** %4, align 8
  %6 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %5, i32 0, i32 0
  %7 = call i32 @hlist_unhashed(i32* %6)
  %8 = call i32 @BUG_ON(i32 %7)
  %9 = load %struct.throtl_grp*, %struct.throtl_grp** %4, align 8
  %10 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %9, i32 0, i32 0
  %11 = call i32 @hlist_del_init(i32* %10)
  %12 = load %struct.throtl_grp*, %struct.throtl_grp** %4, align 8
  %13 = call i32 @throtl_put_tg(%struct.throtl_grp* %12)
  %14 = load %struct.throtl_data*, %struct.throtl_data** %3, align 8
  %15 = getelementptr inbounds %struct.throtl_data, %struct.throtl_data* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* %15, align 4
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @hlist_unhashed(i32*) #1

declare dso_local i32 @hlist_del_init(i32*) #1

declare dso_local i32 @throtl_put_tg(%struct.throtl_grp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
